--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.demofx1.Main.LoginScreenMain</mainClass>
+                                    <mainClass>com.example.demofx1.MAIN.LoginScreenMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -159,7 +159,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.demofx1/com.example.demofx1.Main.HelloApplication</mainClass>
+                            <mainClass>com.example.demofx1/com.example.demofx1.MAIN.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
